--- a/angular/src/app/components/event-cards/event-cards.component.html
+++ b/angular/src/app/components/event-cards/event-cards.component.html
@@ -7,7 +7,7 @@
                 <p class="data">21/09</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="address flex">
-                    <img src="assets/images/ping_map.svg" alt="ping_map">
+                    <img class="ping" src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Foregon</p>
                         <p class="street">Rua Nicolau Cacciatori, 489</p>
@@ -22,7 +22,7 @@
                 <p class="data-mid">18/10</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="address flex">
-                    <img src="assets/images/ping_map.svg" alt="ping_map">
+                    <img class="ping" src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Inova Prudente</p>
                         <p class="street">Av. Comendador Alberto Bonfiglioli, n° 2700</p>
@@ -37,7 +37,7 @@
                 <p class="data">16/11</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="address flex">
-                    <img src="assets/images/ping_map.svg" alt="ping_map">
+                    <img class="ping" src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Inova Prudente</p>
                         <p class="street">Av. Comendador Alberto Bonfiglioli, n° 2700</p>
