pequeno bug no footer

--- a/angular/src/app/components/footer/footer.component.html
+++ b/angular/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="flex">
             <img src="../../../assets/images/Logos/devpp_only_logo.png" alt="">
             <p class="devpp">DEV PP</p>
-            <div class="flex mg">
+            <div class="flex">
                 <p class="cod-conduct">Código de Conduta</p>
                 <img class="arrow1" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
             </div>
