link para codigo de conduta

--- a/angular/src/app/components/footer/footer.component.html
+++ b/angular/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
             <img src="../../../assets/images/Logos/devpp_only_logo.png" alt="">
             <p class="devpp">DEV PP</p>
             <div class="flex">
-                <p class="cod-conduct">Código de Conduta</p>
+                <p class="cod-conduct"><a href="code-of-conduct">Código de Conduta</a></p>
                 <img class="arrow1" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
             </div>
         </div>
