--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -67,7 +67,7 @@
         padding-left: 3vw;
 
         .flex{
-            display: contents;
+            display: block;
 
             .cod-conduct{
                 display: none;
