--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -39,10 +39,11 @@
         }
         .arrow1{
             height: 32px;
+            padding-left: 26vw;
         }
         .community{
             font-size: 1.125rem;
-            width: 40vw;
+            width: 39vw;
             margin-right: 3vw;
         }
     }
