--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="content">
-    <!-- <devpp-hero></devpp-hero>
+    <devpp-hero></devpp-hero>
     <app-reload></app-reload> 
     <app-event-cards></app-event-cards>
     <app-digital-media></app-digital-media>
     <app-partners></app-partners>
     <app-be-part-of-it></app-be-part-of-it>
-    <app-form></app-form>  -->
+    <app-form></app-form> 
 </div> 
