--- a/angular/src/app/components/digital-media/digital-media.component.scss
+++ b/angular/src/app/components/digital-media/digital-media.component.scss
@@ -3,7 +3,7 @@
     
     .container{
         display: flex;
-        margin-left: 363px;
+        margin-left: 20vw;
         margin-bottom: 272px;
 
         h1{
@@ -74,7 +74,30 @@
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1550px) {
+    .digital-media{        
+        .container{
+            display: flex;
+            margin-left: 8vw;
+        }
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .digital-media{        
+        .container{
+            display: flex;
+            margin-left: 8vw;
+            .social-icons{
+                .icons-box{
+                    margin: 10px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1200px) {
     .digital-media{
         display: none;
     }
