--- a/angular/src/app/components/reload/reload.component.scss
+++ b/angular/src/app/components/reload/reload.component.scss
@@ -30,9 +30,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center; 
-        background: #201E25;
         width: 40px;
-        padding: 7px;
+        height: 40px;
         margin-right: 24px;
     }
 
