--- a/angular/src/app/components/event-cards/event-cards.component.scss
+++ b/angular/src/app/components/event-cards/event-cards.component.scss
@@ -24,7 +24,6 @@
         margin-top: -90px;
 
         .card {
-            margin-left: -8vw;
             background-color: #010814;
             width: 24vw;
             margin-bottom: 40px;
@@ -133,19 +132,20 @@ button {
     padding: 16px 24px;
     gap: 145px;
     border: none;
+    margin-top: 10px;
 }
 
 @media screen and (max-width: 1728px) {
     .event-card {
         .content {
-            margin-left: 120px;
+            // margin-left: 8vw;
         }
     }
 }
 
 @media screen and (max-width: 800px) {
     .event-card {
-        margin-left: 2vw;
+        margin-left: 5vw;
         h1 {
             background: linear-gradient(91.06deg, #ffffff 2.26%, #7589ff 70.78%);
             -webkit-background-clip: text;
@@ -159,6 +159,8 @@ button {
         .content {
             display: grid;
             grid-template-columns: auto;
+            margin-top: 8vw;
+            margin-left: 27vw;
             .card {
                 h3 {
                     font-size: 2rem;
