--- a/angular/src/app/components/footer/footer.component.html
+++ b/angular/src/app/components/footer/footer.component.html
@@ -5,6 +5,7 @@
                 <p class="cod-conduct"><a href="code-of-conduct">Código de Conduta</a>                 
                     <img class="arrow1" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
                 </p>
+                <p class="cod-conduct"><a href="who-we-are">who-we-are</a></p>
         </div>
         <br>
         <div class="flex">
