responsividade nas paginas

--- a/angular/src/app/code-of-conduct/code-of-conduct.component.scss
+++ b/angular/src/app/code-of-conduct/code-of-conduct.component.scss
@@ -16,6 +16,13 @@ body{
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-fill-color: transparent;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 130%;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        margin-top: 140px;
+        margin-bottom: 80px;
     }
     h2{
         color: #7589FF;
