--- a/angular/src/app/who-we-are/who-we-are.component.html
+++ b/angular/src/app/who-we-are/who-we-are.component.html
@@ -18,13 +18,13 @@
         <p>
             Se você é desenvolvedor(a) e está interessado(a) em aprender conosco, evoluir,
             dividir conhecimento ou se você tem algum interesse na área e quer nos ajudar a
-            construir uma comunidade forte na nossa cidade junte-se a nós e compareça aos 
-            meetups — veja a agenda. Se você quer compartilhar o seu conhecimento aplique 
-            uma palestra.
+            construir uma comunidade forte na nossa cidade <a href="">junte-se</a> a nós e compareça aos 
+            meetups — <a href="">veja a agenda.</a> Se você quer compartilhar o seu conhecimento <a href="">aplique 
+            uma palestra.</a>
         </p>
         <p>
             Todos os participantes, organizadores, palestrantes, apoiadores, voluntários
-            e qualquer envolvido em nossos eventos devem seguir o nosso Código de Conduta
+            e qualquer envolvido em nossos eventos devem seguir o nosso <a href="">Código de Conduta</a> 
         </p>
     </div>
     <img src="../../../assets/images/background-image/bg-be-part.png" alt="">
